--- a/contact.html
+++ b/contact.html
@@ -12,35 +12,38 @@
       margin-top: 185px;
     }
    
-  
   </style>
 </head>
 <body>
   <header>
     <nav class="navbar2">
-      <div class="logo">Contact</div>
-      <div class="nav-icons">
+
+      <i class="fa-solid fa-bars"></i>
+      <div style="padding-right: 1250px;" class="logo">Contact</div>
+      <div class="nav-icons2">
         <a href="https://www.facebook.com/gtm.aveiro" target="_blank"><i class="fa-brands fa-facebook" style="color: #1DB954;"></i></a>
         <a href="https://www.instagram.com/sworup_7/" target="_blank"><i class="fa-brands fa-instagram" style="color: #1DB954;"></i></a>
         <a href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSDbtzQnqFMTsDnrcqSmXlxpDgjwRtqLnCRHSnfzbHFGltcZkjkBZjxXjRSzsvcsQdQlgBzm" target="_blank"><i class="fa-regular fa-envelope" style="color: #1DB954;"></i></a>
       </div>
+
     </nav>
   </header>
 
   <main>
     <section>
       <h1>Contact Me</h1>
-      <p>Feel free to get in touch with me through the form below:</p>
+      <p>Feel free to get in touch with me through the form below:</p> <br>
       <form class="contact-form">
         <input type="text" placeholder="Your Name" required>
         <input type="email" placeholder="Your Email" required>
         <textarea rows="5" placeholder="Your Message" required></textarea>
-        <button type="submit">Send Message</button>
+        <button type="submit"><b>Send Message</b></button>
       </form>
     </section>
+    
   </main>
 
-  <footer>
+  <footer style="margin-top: 160px;">
     <p>© 2024 Sworup Gautam. All Rights Reserved.</p>
   </footer>
 </body>
