--- a/about.html
+++ b/about.html
@@ -5,11 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Me</title>
   <link rel="stylesheet" href="newstyle.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
   <header>
     <nav class="navbar2">
-      <div class="logo">About Me</div>
+      <i class="fa-solid fa-bars"></i>
+
+      <div style="padding-right: 1310px;" class="logo">About Me</div>
     </nav>
   </header>
 
