--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="parent">
 
     <section id="hero">
-      <h1 >Welcome to My Portfolio !</h1>
+      <h1 >Welcome to My Portfolio !!</h1>
       <b><h2 style="color: white;">Sworup Gautam</h2 style="color: white;"></b>
       <h2 style="color: greenyellow;display: inline-block; 
       overflow: hidden; 
