--- a/index.html
+++ b/index.html
@@ -62,13 +62,14 @@
     <div class="parent">
 
     <section id="hero">
-      <h1 >Welcome to My Portfolio !!</h1>
+      <h1 >Welcome !!</h1>
       <b><h2 style="color: white;">Sworup Gautam</h2 style="color: white;"></b>
-      <h2 style="color: greenyellow;display: inline-block; 
+      <h2 style="color: rgb(81, 255, 0);display: inline-block; 
       overflow: hidden; 
       white-space: nowrap; 
       border-right: 2px solid black; 
-      animation: typing 4s steps(30, end), blink 0.6s step-end infinite;"> < UI/UX Designer > </UI></h2 style="color: white;">
+      animation: typing 3s steps(30, end), blink 0.6s step-end infinite;"> UI/UX Designer 
+      </h2 style="color: white;">
     </section>
 
     <section id="image">
